--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center">
         <!-- Replaced logo with Picsum placeholder -->
-        <img src="https://picsum.photos/40" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full">
+        <img src="/assets/images/logo.png" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full">
         <h1 class="text-xl sm:text-2xl font-bold">Spinners Pizza</h1>
       </div>
       <nav>
