--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center">
         <!-- Replaced logo with Picsum placeholder -->
-        <img src="/assets/images/logo.png" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full">
+        <img src="assets/images/logo.png" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full">
         <h1 class="text-xl sm:text-2xl font-bold">Spinners Pizza</h1>
       </div>
       <nav>
@@ -53,7 +53,7 @@
   </header>
 
   <!-- Hero Section -->
-  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://picsum.photos/1600/900');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-20 h-full flex flex-col items-center justify-center text-center text-white p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
