--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spinners Pizza</title>
+  <link rel="icon" href="assets/images/logos/1.png">
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body class="bg-gray-100 text-gray-800">
-  <header class="bg-red-500 text-white fixed w-full z-10 shadow-md">
+  <header class="bg-red-500 text-white fixed w-full z-30 shadow-md">
     <div class="container mx-auto flex justify-between items-center p-4">
       <div class="flex items-center">
         <img id="logo" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full" onerror="this.onerror=null; this.src='https://picsum.photos/40'">
@@ -44,9 +45,9 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative pt-20" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
-    <div class="relative z-20 h-full flex flex-col items-center justify-center text-center text-white p-4 px-6 sm:px-12">
+    <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-white p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
       <p class="text-lg sm:text-xl mb-6">Grovespring's local pizzeria, BBQ palace, and burger joint, come hang out!</p>
       <a href="#menu" class="bg-red-600 px-6 py-3 rounded-full text-lg hover:bg-red-700 transition-colors duration-300">Explore Our Menu</a>
