--- a/index.html
+++ b/index.html
@@ -5,12 +5,37 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spinners Pizza</title>
   <link rel="icon" href="assets/images/logos/1.png">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Roboto:wght@400;700&display=swap" rel="stylesheet">
+  <script>
+    tailwind.config = {
+      theme: {
+        extend: {
+          fontFamily: {
+            montserrat: ['Montserrat', 'sans-serif'],
+            roboto: ['Roboto', 'sans-serif'],
+          },
+          colors: {
+            primary: {
+              DEFAULT: '#ef4444',
+              dark: '#dc2626',
+            },
+            secondary: {
+              DEFAULT: '#3b82f6',
+            },
+            tertiary: {
+              DEFAULT: '#ffffff',
+            },
+          },
+        }
+      }
+    }
+  </script>
   <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body class="bg-gray-100 text-gray-800">
-  <header class="bg-red-500 text-white fixed w-full z-30 shadow-md">
+<body class="bg-gray-100 text-gray-800 font-roboto">
+  <header class="bg-primary text-white fixed w-full z-30 shadow-md">
     <div class="container mx-auto flex justify-between items-center p-4">
-      <div class="flex items-center">
+      <div class="flex items-center font-montserrat">
         <img id="logo" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full" onerror="this.onerror=null; this.src='https://picsum.photos/40'">
         <h1 class="text-xl sm:text-2xl font-bold">Spinners Pizza</h1>
       </div>
@@ -32,7 +57,7 @@
         </button>
       </nav>
     </div>
-    <div id="mobile-menu" class="hidden md:hidden bg-red-500">
+    <div id="mobile-menu" class="hidden md:hidden bg-primary">
       <ul class="flex flex-col items-center space-y-2 p-4">
         <li><a href="#home" class="hover:underline">Home</a></li>
         <li><a href="#about" class="hover:underline">About Us</a></li>
@@ -45,60 +70,58 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative pt-20" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative pt-16" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
-    <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-white p-4 px-6 sm:px-12">
-      <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
+    <div class="relative z-20 h-full flex flex-col items-center justify-center text-center text-white p-4 px-6 sm:px-12">
+      <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4 font-montserrat">Welcome to Spinners Pizza!</h2>
       <p class="text-lg sm:text-xl mb-6">Grovespring's local pizzeria, BBQ palace, and burger joint, come hang out!</p>
-      <a href="#menu" class="bg-red-600 px-6 py-3 rounded-full text-lg hover:bg-red-700 transition-colors duration-300">Explore Our Menu</a>
+      <a href="#menu" class="bg-primary dark:bg-primary-dark px-6 py-3 rounded-full text-lg hover:bg-primary-dark transition-colors duration-300">Explore Our Menu</a>
     </div>
   </section>
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
-      <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
+      <h3 class="text-2xl sm:text-3xl font-bold mb-4 font-montserrat">About Spinners Pizza</h3>
       <p class="text-base sm:text-lg">At Spinners Pizza, our passion is crafting delicious pizzas and other menu items with the finest ingredients. Our commitment to quality and community drives us to serve you every day.</p>
       <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
   </section>
-  <section class="py-12 bg-gray-100">
+  <section id="hours" class="py-12 bg-secondary text-white">
+    <div class="container mx-auto text-center px-6">
+      <h3 class="text-xl sm:text-2xl font-bold mb-4 font-montserrat">Winter Hours</h3>
+      <ul class="text-sm sm:text-base space-y-2">
+        <li>Monday: 11am - 8pm</li>
+        <li>Tuesday: 11am - 8pm</li>
+        <li>Wednesday: 11am - 3pm</li>
+        <li>Thursday: 11am - 8pm</li>
+        <li>Friday: 11am - 8pm</li>
+        <li>Saturday: 11am - 8pm</li>
+        <li>Sunday: 11am - 6pm</li>
+      </ul>
+      <p class="mt-4 font-semibold text-xs">Please note that these are our winter operating hours. Check back for updates on our regular hours.</p>
+    </div>
+  </section>
+  <section id="gallery" class="py-12 bg-gray-100">
     <div class="container mx-auto px-6">
-      <div class="flex flex-col md:flex-row md:space-x-8">
-        <div id="hours" class="md:w-1/3 bg-white p-6 rounded-lg shadow-md mb-8 md:mb-0">
-          <h3 class="text-xl sm:text-2xl font-bold mb-4">Winter Hours</h3>
-          <ul class="text-sm sm:text-base space-y-2">
-            <li>Monday: 11am - 8pm</li>
-            <li>Tuesday: 11am - 8pm</li>
-            <li>Wednesday: 11am - 3pm</li>
-            <li>Thursday: 11am - 8pm</li>
-            <li>Friday: 11am - 8pm</li>
-            <li>Saturday: 11am - 8pm</li>
-            <li>Sunday: 11am - 6pm</li>
-          </ul>
-          <p class="mt-4 text-red-500 font-semibold text-xs">Please note that these are our winter operating hours. Check back for updates on our regular hours.</p>
-        </div>
-        <div id="gallery" class="md:w-2/3">
-          <h3 class="text-2xl sm:text-3xl font-bold mb-4">Explore Our Space</h3>
-          <p class="mb-6 text-base sm:text-lg">Take a look inside our cozy and welcoming restaurant, perfect for family meals or a quick bite with friends!</p>
-          <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <img src="assets/images/restaurant/01 entrance - looking left - hallway.jpg" alt="Entrance Hallway" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=1'">
-            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
-            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
-            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
-            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
-            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
-            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
-          </div>
-        </div>
+      <h3 class="text-2xl sm:text-3xl font-bold mb-4 font-montserrat text-center">Explore Our Space</h3>
+      <p class="mb-6 text-base sm:text-lg text-center">Take a look inside our cozy and welcoming restaurant, perfect for family meals or a quick bite with friends!</p>
+      <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
+        <img src="assets/images/restaurant/01 entrance - looking left - hallway.jpg" alt="Entrance Hallway" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=1'">
+        <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
+        <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+        <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
+        <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
+        <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
+        <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
+        <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
       </div>
     </div>
   </section>
   <section id="menu" class="py-12 bg-white">
     <div class="container mx-auto px-6">
-      <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8">Our Full Menu</h3>
+      <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8 font-montserrat">Our Full Menu</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
         <div>
-          <h4 class="text-xl sm:text-2xl font-semibold mb-4">Appetizers</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mb-4 font-montserrat">Appetizers</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Mac 'n Cheese Bacon Nuggets</span><span>$6.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Jalapeño Poppers (6 pieces)</span><span>$6.99</span></li>
@@ -113,21 +136,21 @@
             <li class="flex justify-between text-sm sm:text-base"><span>12" Garlic Cheese Bread (Full)</span><span>$6.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>12" Garlic Cheese Bread (Additional Dipping Sauce)</span><span>$0.99</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Salads</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Salads</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Side Salad (Lettuce, Cheddar Cheese, Tomato)</span><span>$2.45</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Chef Salad (Lettuce, Bacon, Cheese, Ham, Turkey)</span><span>$6.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Fajita Chicken Salad (Lettuce, Chicken, Mozzarella)</span><span>$8.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Taco Salad (Lettuce, Chicken, Mozzarella & Cheddar Cheese)</span><span>$8.99</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Wings</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Wings</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Baked or Fried Chicken Wings (1 lb)</span><span>$11.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Baked or Fried Chicken Wings (2 lb)</span><span>$19.99</span></li>
           </ul>
         </div>
         <div>
-          <h4 class="text-xl sm:text-2xl font-semibold mb-4">Create Your Own Pizza</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mb-4 font-montserrat">Create Your Own Pizza</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Original Hand Tossed 12"</span><span>$10.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Original Hand Tossed 14"</span><span>$12.99</span></li>
@@ -135,7 +158,7 @@
             <li class="flex justify-between text-sm sm:text-base"><span>Gluten-Free (Only Available in 10")</span><span>$12.00</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Add Your Favorite Toppings</span><span>$2.00</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Specialty Pizzas</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Specialty Pizzas</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>A-1 Steak: Steak, Italian Beef, Mozzarella</span><span>$11.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Bacon Cheeseburger: Cheeseburger, Mozzarella</span><span>$10.99</span></li>
@@ -146,30 +169,28 @@
             <li class="flex justify-between text-sm sm:text-base"><span>Cheesy Fry: Cheddar Cheese, Fries, Beef, Onion, Bacon Bits, Mozzarella & Cheddar Cheese</span><span>$10.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Cheesy Egg & Cheese: Scrambled Eggs, Cheese, Italian Sausage, Mozzarella & Cheddar Cheese</span><span>$9.99</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Burgers</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Burgers</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Spinner Special Smoked Burger: Served on your choice of hoagie bread, pita bread, or 10" flour tortilla wrap.</span><span>$11.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Radar Burger: Mozzarella Cheese, Onion, Ranch Dressing, Bacon.</span><span>$10.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Hawaiian Burger: Canadian Bacon, Pineapple.</span><span>$11.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Big and Wolf Burger: Mozzarella Cheese, Onions, Mushrooms, Pickles, with Mozzarella & Bacon.</span><span>$11.99</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Desserts</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Desserts</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Cookies (2)</span><span>$1.50</span></li>
           </ul>
-          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4">Drinks</h4>
+          <h4 class="text-xl sm:text-2xl font-semibold mt-8 mb-4 font-montserrat">Drinks</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>20 oz Fountain Drinks</span><span>$2.25</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>1 Liter Bottle</span><span>$2.99</span></li>
             <li class="flex justify-between text-sm sm:text-base"><span>Root Beer, Mountain Dew, Dole Juice</span><span>$2.99</span></li>
           </ul>
         </div>
-      </div>
-    </div>
-  </section>
+      </section>
   <section id="reviews" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
-      <h3 class="text-2xl sm:text-3xl font-bold mb-4">Customer Reviews</h3>
+      <h3 class="text-2xl sm:text-3xl font-bold mb-4 font-montserrat">Customer Reviews</h3>
       <p class="text-base sm:text-lg mb-6">Read what our customers have to say! <span class="font-semibold">(10 Reviews)</span></p>
       <div class="relative w-full max-w-4xl mx-auto overflow-hidden">
         <a href="https://www.restaurantji.com/mo/grovespring/spinners-pizza-/" target="_blank" class="text-blue-500 hover:underline">View on Restaurantji</a>
@@ -206,13 +227,13 @@
   </section>
   <section id="discounts" class="py-12 bg-red-500 text-white">
     <div class="container mx-auto text-center px-6">
-      <h3 class="text-2xl sm:text-3xl font-bold mb-4">Discounts for Our Heroes</h3>
+      <h3 class="text-2xl sm:text-3xl font-bold mb-4 font-montserrat">Discounts for Our Heroes</h3>
       <p class="text-base sm:text-lg">We honor our service members, police officers, firefighters, and first responders with special discounts as a token of our appreciation.</p>
     </div>
   </section>
   <section id="contact" class="py-12 bg-white">
     <div class="container mx-auto px-6">
-      <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8">Contact Us</h3>
+      <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8 font-montserrat">Contact Us</h3>
       <div class="text-center">
         <p class="mb-2">Address: 9537 MO-5, Grovespring, MO 65662</p>
         <p class="mb-2">(417) 462-7746</p>
