--- a/index.html
+++ b/index.html
@@ -1,36 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Spinners Pizza</title>
   <link rel="icon" href="assets/images/logos/1.png">
-  <!-- Tailwind CSS with Custom Configuration -->
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
-            primary: '#ef4444',        // Primary Color
-            secondary: '#ffffff',      // Secondary Color
-            tertiary: '#4488ef',       // Tertiary Color
-            'tertiary-light': '#f2f1f1' // Tertiary Light Color
+            primary: '#ef4444',
+            secondary: '#ffffff',
+            tertiary: '#4488ef',
+            'tertiary-light': '#f2f1f1'
           }
         }
       }
     }
   </script>
-</head>
+  <style>
+    @keyframes rotate-logo {
+      from {
+        transform: rotate(0deg);
+      }
+      to {
+        transform: rotate(360deg);
+      }
+    }
 
+    .animate-rotate {
+      animation: rotate-logo 4s linear infinite;
+    }
+  </style>
+</head>
 <body class="bg-gray-100 text-gray-800">
-  <header class="bg-primary text-secondary fixed w-full z-30 shadow-md">
-    <div class="container mx-auto flex justify-between items-center p-4">
-      <div class="flex items-center">
-        <img id="logo" alt="Spinners Pizza Logo" class="h-10 w-10 mr-2 rounded-full" onerror="this.onerror=null; this.src='https://picsum.photos/40'">
-        <h1 class="text-xl sm:text-2xl font-bold">Spinners Pizza</h1>
+  <header class="bg-primary text-secondary fixed w-full z-30 shadow-md overflow-visible">
+    <div class="container mx-auto flex justify-between items-center p-4 relative">
+      <div class="absolute left-4 top-5 bg-secondary rounded-md h-40 w-40 flex items-center justify-center border-4 border-white">
+        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
+      <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
         <ul class="hidden md:flex space-x-4">
           <li><a href="#home" class="hover:underline hover:text-tertiary">Home</a></li>
@@ -49,7 +60,7 @@
         </button>
       </nav>
     </div>
-    <div id="mobile-menu" class="hidden md:hidden bg-primary">
+    <div id="mobile-menu" class="hidden md:hidden bg-primary rounded-md shadow-md">
       <ul class="flex flex-col items-center space-y-2 p-4">
         <li><a href="#home" class="hover:underline hover:text-tertiary">Home</a></li>
         <li><a href="#about" class="hover:underline hover:text-tertiary">About Us</a></li>
@@ -62,16 +73,14 @@
       </ul>
     </div>
   </header>
-
-  <section id="home" class="bg-cover bg-center h-screen relative pt-20" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-secondary p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
       <p class="text-lg sm:text-xl mb-6">Grovespring's local pizzeria, BBQ palace, and burger joint, come hang out!</p>
-      <a href="#menu" class="bg-primary px-6 py-3 rounded-full text-lg hover:bg-red-600 transition-colors duration-300">Explore Our Menu</a>
+      <a href="#menu" class="bg-primary px-6 py-3 rounded text-lg hover:bg-red-600 transition-colors duration-300">Explore Our Menu</a>
     </div>
   </section>
-
   <section id="about" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">About Spinners Pizza</h3>
@@ -79,11 +88,10 @@
       <p class="mt-4 text-base sm:text-lg">We proudly offer discounts to our heroes – service members, police officers, firefighters, and first responders – as a thank you for their dedication.</p>
     </div>
   </section>
-
   <section class="py-12 bg-gray-100">
     <div class="container mx-auto px-6">
       <div class="flex flex-col md:flex-row md:space-x-8">
-        <div id="hours" class="md:w-1/3 bg-tertiary p-6 rounded-lg shadow-md mb-8 md:mb-0 text-secondary">
+        <div id="hours" class="md:w-1/3 bg-tertiary p-6 rounded-md shadow-md mb-8 md:mb-0 text-secondary">
           <h3 class="text-xl sm:text-2xl font-bold mb-4">Winter Hours</h3>
           <ul class="text-sm sm:text-base space-y-2">
             <li>Monday: 11am - 8pm</li>
@@ -94,31 +102,30 @@
             <li>Saturday: 11am - 8pm</li>
             <li>Sunday: 11am - 6pm</li>
           </ul>
-          <p class="mt-4 text-secondary font-semibold text-xs">Please note that these are our winter operating hours. Check back for updates on our regular hours.</p>
+          <p class="mt-4 font-semibold text-xs">Please note that these are our winter operating hours. Check back for updates on our regular hours.</p>
         </div>
-        <div id="gallery" class="md:w-2/3 bg-tertiary-light p-6 rounded-lg shadow-md">
+        <div id="gallery" class="md:w-2/3 bg-tertiary-light p-6 rounded-md shadow-md">
           <h3 class="text-2xl sm:text-3xl font-bold mb-4">Explore Our Space</h3>
           <p class="mb-6 text-base sm:text-lg">Take a look inside our cozy and welcoming restaurant, perfect for family meals or a quick bite with friends!</p>
           <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-4">
-            <img src="assets/images/restaurant/01 entrance - looking left - hallway.jpg" alt="Entrance Hallway" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=1'">
-            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
-            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
-            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
-            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
-            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
-            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
-            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-lg shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
+            <img src="assets/images/restaurant/01 entrance - looking left - hallway.jpg" alt="Entrance Hallway" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=1'">
+            <img src="assets/images/restaurant/02 walking in from front door looking at the dining room.jpg" alt="Walking into Dining Room" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=2'">
+            <img src="assets/images/restaurant/03 straight from the entrance looking at the counter.jpg" alt="Looking at the Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=3'">
+            <img src="assets/images/restaurant/04 view from counter looking at the door to the restaurant and the restrooms.jpg" alt="Door to Restaurant and Restrooms" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=4'">
+            <img src="assets/images/restaurant/05 view of dining room from the counter.jpg" alt="Dining Room from Counter" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=5'">
+            <img src="assets/images/restaurant/06 dining area.jpg" alt="Dining Area 1" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=6'">
+            <img src="assets/images/restaurant/07 dining area.jpg" alt="Dining Area 2" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=7'">
+            <img src="assets/images/restaurant/08 dining area.jpg" alt="Dining Area 3" class="rounded-md shadow-md w-full" onerror="this.onerror=null; this.src='https://picsum.photos/400/300?random=8'">
           </div>
         </div>
       </div>
     </div>
   </section>
-
   <section id="menu" class="py-12 bg-tertiary-light">
     <div class="container mx-auto px-6">
       <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8">Our Full Menu</h3>
       <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-        <div class="bg-tertiary-light p-6 rounded-lg shadow-md">
+        <div class="bg-tertiary-light p-6 rounded-md shadow-md">
           <h4 class="text-xl sm:text-2xl font-semibold mb-4">Appetizers</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Mac 'n Cheese Bacon Nuggets</span><span>$6.99</span></li>
@@ -147,7 +154,7 @@
             <li class="flex justify-between text-sm sm:text-base"><span>Baked or Fried Chicken Wings (2 lb)</span><span>$19.99</span></li>
           </ul>
         </div>
-        <div class="bg-tertiary-light p-6 rounded-lg shadow-md">
+        <div class="bg-tertiary-light p-6 rounded-md shadow-md">
           <h4 class="text-xl sm:text-2xl font-semibold mb-4">Create Your Own Pizza</h4>
           <ul class="space-y-2">
             <li class="flex justify-between text-sm sm:text-base"><span>Original Hand Tossed 12"</span><span>$10.99</span></li>
@@ -188,7 +195,6 @@
       </div>
     </div>
   </section>
-
   <section id="reviews" class="py-12 bg-gray-50">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">Customer Reviews</h3>
@@ -197,7 +203,7 @@
         <a href="https://www.restaurantji.com/mo/grovespring/spinners-pizza-/" target="_blank" class="text-tertiary hover:underline">View on Restaurantji</a>
         <div id="review-carousel" class="flex transition-transform duration-1000 ease-in-out">
           <div class="min-w-full flex-shrink-0 p-6">
-            <div class="bg-white p-6 rounded-lg shadow-md h-full flex flex-col">
+            <div class="bg-white p-6 rounded-md shadow-md h-full flex flex-col">
               <blockquote class="italic text-base sm:text-lg mb-4 flex-grow">"Had the debris pizza, it was terrific..."</blockquote>
               <div>
                 <p class="font-semibold">- Bill Kaferstein, September 2024 on Google</p>
@@ -210,7 +216,7 @@
             </div>
           </div>
           <div class="min-w-full flex-shrink-0 p-6">
-            <div class="bg-white p-6 rounded-lg shadow-md h-full flex flex-col">
+            <div class="bg-white p-6 rounded-md shadow-md h-full flex flex-col">
               <blockquote class="italic text-base sm:text-lg mb-4 flex-grow">"Had a supreme pizza that was delicious."</blockquote>
               <div>
                 <p class="font-semibold">- Ronnie Long, September 2024 on Google</p>
@@ -222,19 +228,16 @@
               </div>
             </div>
           </div>
-          <!-- Add more reviews as needed -->
         </div>
       </div>
     </div>
   </section>
-
   <section id="discounts" class="py-12 bg-primary text-secondary">
     <div class="container mx-auto text-center px-6">
       <h3 class="text-2xl sm:text-3xl font-bold mb-4">Discounts for Our Heroes</h3>
       <p class="text-base sm:text-lg">We honor our service members, police officers, firefighters, and first responders with special discounts as a token of our appreciation.</p>
     </div>
   </section>
-
   <section id="contact" class="py-12 bg-white">
     <div class="container mx-auto px-6">
       <h3 class="text-2xl sm:text-3xl font-bold text-center mb-8">Contact Us</h3>
@@ -247,25 +250,24 @@
       </div>
     </div>
   </section>
-
   <footer class="bg-gray-800 text-secondary text-center p-4">
     <p>© 2024 Spinners Pizza. All rights reserved.</p>
   </footer>
-
   <script>
-    // Set Random Logo on Page Load
     const logo = document.getElementById('logo');
     const logoNumber = Math.floor(Math.random() * 13) + 1;
     logo.src = `assets/images/logos/${logoNumber}.png`;
-
-    // Toggle Mobile Menu
     const menuButton = document.getElementById('mobile-menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
-    menuButton.addEventListener('click', () => {
+    menuButton.addEventListener('click', (e) => {
+      e.stopPropagation();
       mobileMenu.classList.toggle('hidden');
     });
-
-    // Review Carousel
+    document.addEventListener('click', (event) => {
+      if (!mobileMenu.classList.contains('hidden') && !mobileMenu.contains(event.target) && !menuButton.contains(event.target)) {
+        mobileMenu.classList.add('hidden');
+      }
+    });
     document.addEventListener('DOMContentLoaded', () => {
       const carouselInner = document.getElementById('review-carousel');
       const totalSlides = carouselInner.children.length;
@@ -278,5 +280,4 @@
     });
   </script>
 </body>
-
 </html>
