--- a/index.html
+++ b/index.html
@@ -23,22 +23,27 @@
   <style>
     @keyframes rotate-logo {
       from {
-        transform: rotate(0deg);
+        transform: rotateY(0deg);
       }
       to {
-        transform: rotate(360deg);
+        transform: rotateY(360deg);
       }
     }
 
     .animate-rotate {
       animation: rotate-logo 4s linear infinite;
+      transform-style: preserve-3d;
+    }
+
+    .logo-container {
+      perspective: 1000px;
     }
   </style>
 </head>
 <body class="bg-gray-100 text-gray-800">
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative">
-      <div class="absolute left-4 top-5 bg-secondary rounded-md h-40 w-40 flex items-center justify-center border-4 border-white">
+      <div class="absolute left-4 top-5 bg-secondary rounded-md h-40 w-40 flex items-center justify-center border-4 border-white logo-container">
         <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
@@ -255,8 +260,17 @@
   </footer>
   <script>
     const logo = document.getElementById('logo');
-    const logoNumber = Math.floor(Math.random() * 13) + 1;
-    logo.src = `assets/images/logos/${logoNumber}.png`;
+    let lastLogoNumber = 0;
+    const setRandomLogo = () => {
+      let logoNumber;
+      do {
+        logoNumber = Math.floor(Math.random() * 13) + 1;
+      } while (logoNumber === lastLogoNumber);
+      lastLogoNumber = logoNumber;
+      logo.src = `assets/images/logos/${logoNumber}.png`;
+    };
+    setRandomLogo();
+    setInterval(setRandomLogo, 4000);
     const menuButton = document.getElementById('mobile-menu-button');
     const mobileMenu = document.getElementById('mobile-menu');
     menuButton.addEventListener('click', (e) => {
