--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
       </ul>
     </div>
   </header>
-  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('https://cdn.pixabay.com/photo/2015/03/18/19/17/american-flag-679823_1280.jpg');">
+  <section id="home" class="bg-cover bg-center h-screen relative" style="background-image: url('assets/images/backgrounds/1.png');">
     <div class="absolute inset-0 z-10 bg-black bg-opacity-50"></div>
     <div class="relative z-10 h-full flex flex-col items-center justify-center text-center text-secondary p-4 px-6 sm:px-12">
       <h2 class="text-3xl sm:text-4xl md:text-5xl font-bold mb-4">Welcome to Spinners Pizza!</h2>
