--- a/index.html
+++ b/index.html
@@ -10,15 +10,15 @@
   <!-- Open Graph Meta Tags -->
   <meta property="og:title" content="Spinners Pizza" />
   <meta property="og:description" content="Grovespring's local pizzeria, BBQ palace, and burger joint—come hang out!" />
-  <meta property="og:image" content="https://yourdomain.com/assets/images/background/current.jpg" />
-  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:image" content="assets/images/background/current.jpg" />
+  <meta property="og:url" content="https://spinners.pizza/" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Spinners Pizza" />
   <meta name="twitter:description" content="Grovespring's local pizzeria, BBQ palace, and burger joint—come hang out!" />
-  <meta name="twitter:image" content="https://yourdomain.com/assets/images/background/current.jpg" />
+  <meta name="twitter:image" content="assets/images/background/current.jpg" />
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
