--- a/index.html
+++ b/index.html
@@ -7,18 +7,34 @@
   <title>Spinners Pizza</title>
   <link rel="icon" href="assets/images/logos/1.png">
 
-  <!-- Open Graph Meta Tags -->
-  <meta property="og:title" content="Spinners Pizza" />
-  <meta property="og:description" content="Grovespring's local pizzeria, BBQ palace, and burger joint—come hang out!" />
-  <meta property="og:image" content="assets/images/background/current.jpg" />
-  <meta property="og:url" content="https://spinners.pizza/" />
+  <!-- General Open Graph Meta Tags -->
+  <meta property="og:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
+  <meta property="og:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
+  <meta property="og:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+  <meta property="og:url" content="https://spinners.pizza" />
   <meta property="og:type" content="website" />
 
   <!-- Twitter Card Meta Tags -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Spinners Pizza" />
-  <meta name="twitter:description" content="Grovespring's local pizzeria, BBQ palace, and burger joint—come hang out!" />
-  <meta name="twitter:image" content="assets/images/background/current.jpg" />
+  <meta name="twitter:title" content="Spinner's Pizza - Your Favorite Pizza Spot!" />
+  <meta name="twitter:description" content="Delicious pizzas, mouth-watering wings, and more! Visit Spinner's Pizza today!" />
+  <meta name="twitter:image" content="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+
+  <!-- Apple iMessage Meta Tag (iOS Smart App Banner Fallback) -->
+  <meta name="apple-mobile-web-app-title" content="Spinner's Pizza" />
+  <link rel="apple-touch-icon" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" />
+
+  <!-- Facebook Meta Tags -->
+  <meta property="og:site_name" content="Spinner's Pizza" />
+  <meta property="og:locale" content="en_US" />
+
+  <!-- WhatsApp, Facebook Messenger, and Other Messaging Apps -->
+  <meta name="og:image:width" content="1200" />
+  <meta name="og:image:height" content="630" />
+
+  <!-- Additional Link for Favicons -->
+  <link rel="icon" type="image/png" href="https://github.com/garbledhamster/spinners.pizza/blob/main/assets/images/background/current.jpg?raw=true" sizes="192x192" />
+
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
