--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <header class="bg-primary text-secondary fixed w-full z-30 shadow-md overflow-visible">
     <div class="container mx-auto flex justify-between items-center p-4 relative">
       <div class="absolute left-4 top-5 bg-secondary rounded-md h-40 w-40 flex items-center justify-center border-4 border-white logo-container">
-        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
+        <img id="logo" alt="Spinners Pizza Logo" class="h-full w-full rounded-md object-cover animate-rotate bg-white p-6 rounded-md shadow-md border border-blue-500" onerror="this.onerror=null; this.src='https://picsum.photos/160'">
       </div>
       <h1 class="text-xl sm:text-2xl font-bold ml-48 mr-4">Spinners Pizza</h1>
       <nav>
